--- a/progress.html
+++ b/progress.html
@@ -1,21 +1,12 @@
 <!doctype html>
 <html>
 <head>
-<title>Gaia by Happy Apocalypse</title>
+<title>Unity Game</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div class="container">
-  <div class="nav"> 
-	  <li><a href="index.html" title="Home">Home</a></li>
-	  <li><a href="story.html" title="Story">Story</a></li>
-	  <li><a href="progress.html" title="Progress">Progress</a></li>
-	  <li><a href="game.html" title="Game">Game</a></li>
-	  <li><a href="contact.html" title="Contact">Contact</a></li>
-  </div>
-  <div class="logo"> <img src="logo.png" /> <em>by Happy Apocalypse</em> </div>
-  <div class="image"></div>
   <div class="leftcontent">
 		
     <h3>Progress</h3>
@@ -41,11 +32,11 @@
 	<li>Added 10 hidden parts on the map</li>
 	<li>At the beginning image and text appears</li>
 	<li>At spaceship screen fades in and game ends once you have 10 parts</li></td>
-	<td>by Tünde</td>
+	<td>by TÃ¼nde</td>
 	</tr>
 	<tr>
 	<td>ver.2.5</td>
-	<td><li>Inventory added to Player’s script, counting how many spaceship parts Player has picked up so far</li>
+	<td><li>Inventory added to Playerâ€™s script, counting how many spaceship parts Player has picked up so far</li>
 	<li>Enemy animation slightly fixed again</li></td>
 	<td>by Jere</td>
 	</tr>
@@ -53,17 +44,17 @@
 	<td>ver.2.4</td>
 	<td><li>Spaceship on the map with a message that informs you that you need 10 ship parts</li>
 	<li>Spaceship part object that gives a message when triggered and disappears from map</li></td>
-	<td>by Tünde</td>
+	<td>by TÃ¼nde</td>
 	</tr>
 	<tr>
 	<td>ver.2.2 <br>
 	ver.2.3</td>
 	<td><li>Added 10 more maps with working collisions and layers</li>
 	<li>Script for screen fading in and out when teleporting from one map to another</li>
-	<li>Player can’t move with arrow keys while teleporting</li>
+	<li>Player canâ€™t move with arrow keys while teleporting</li>
 	<li>Still trying to create Doctor image</li>
 	<li>Message script so text appears on screen when colliding with a specific trigger</li></td>
-	<td>by Tünde</td>
+	<td>by TÃ¼nde</td>
 	</tr>
 	<tr>
 	<td>ver.2.1</td>
@@ -83,11 +74,11 @@
 	<li>Camera script for zooming in the game that stays the same no matter what the resolution is and targeting the Player</li>
 	<li>Player can teleport from one place to another on the map using triggered collision</li>
 	<li>Started to draw the Player with matching pixel style (and failing)</li></td>
-	<td>by Tünde</td>
+	<td>by TÃ¼nde</td>
 	</tr>
 	<tr>
 	<td>ver.1</td>
-	<td><li>Divided the game map in two parts (A for Jere and B for Tünde) that we each work on separately</li>
+	<td><li>Divided the game map in two parts (A for Jere and B for TÃ¼nde) that we each work on separately</li>
 	<li>Wrote the background story together and the stories for each part of the map separately</li>
 	<li>Created a document on draw.io to have a better view of the game and its content that we will work on</li></td>
 	<td>together</td>
@@ -95,6 +86,6 @@
 	</table>
 	</div>
 	</div>
-  <div class="footer"> &copy; Tünde Taba, Happy Apocalypse</div>
+  <div class="footer"> &copy; TÃ¼nde Taba, Happy Apocalypse</div>
 </body>
 </html>
