--- a/progress.html
+++ b/progress.html
@@ -86,6 +86,6 @@
 	</table>
 	</div>
 	</div>
-  <div class="footer"> &copy; Tünde Taba, Happy Apocalypse</div>
+  <div class="footer"> &copy; Tünde Taba</div>
 </body>
 </html>
